overlap fix
fixed overlap issue in top menu mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body{
 
 .navbar.navbar-default{
 	border-radius: 0px;
+	z-index: 9999;
 }
 
 .sticky{
